# perps

./: ImplementationPlan.md  README.md
backend/: .env  .env.example  .gitignore  README.md  jest.config.cjs  main.py  package-lock.json  package.json  prisma.config.ts  pyproject.toml  requirements.txt  tsconfig.json
backend/app/: lifecycle.py  main.py
backend/app/config/: database.py  kafka.py  redis.py  settings.py  websocket.py
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20260525051500_order_table_created/: migration.sql
backend/prisma/migrations/20260526072800_add_account_tables/: migration.sql
backend/prisma/migrations/20260528063154_add_withdrawal_reserve/: migration.sql
backend/prisma/migrations/2026052806400_add_available_balance_function/: migration.sql
backend/prisma/migrations/20260529064502_add_market_tables/: migration.sql
backend/prisma/migrations/20260602095029_refresh_tokens/: migration.sql
backend/prisma/migrations/20260602115819_api_table/: migration.sql
backend/prisma/seed-data/: markets.ts
backend/scripts/: seed-market-redis.ts
backend/src/: app.ts  server.ts
backend/src/@types/express/: index.d.ts
backend/src/cache/: market-keys.ts  redis.ts
backend/src/config/: env.ts
backend/src/db/: prisma.ts
backend/src/middlewares/: admin.middleware.ts  auth.middleware.ts  error.middleware.ts  requestId.middleware.ts  validate.middleware.ts
backend/src/routes/: index.ts
backend/src/routes/accounts/: accounts.controller.ts  (+5 more)
backend/src/types/: auth.type.ts  express.d.ts
backend/src/utils/: api-error.ts
(+18 files in other folders)
