[project]
name = "perps-backend"
version = "0.1.0"
description = "Python FastAPI backend for the perps project"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.dependencies]
fastapi = "^0.136.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
# Optional dev dependencies can be added here
